src/style/movies-slider.scss
@import './@index.scss';

.slider-container {
    position: relative;
    .row-title {
        position: absolute;
        top: 0;
        left: 0;
        color: #fff;
        padding: 0 20px;
    }
    .row-movies {
        display: flex;
        overflow-x: scroll;
        padding: 30px 20px 30px 20px;
        transform: translateX(0px);
        transition: all 0.8s ease;
    }
    .arrow-icons-wrapper {
        pointer-events: none;
        position: absolute;
        top: 40%;
        left: 0;
        min-width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 10px 20px;
        z-index: 100;
        .arrow {
            pointer-events: all;
            visibility: visible;
            opacity: 1;
            cursor: pointer;
        }
        .hidden-arrow {
            visibility: hidden;
            opacity: 0;
        }
    }

    .row-movies::-webkit-scrollbar {
        display: none;
    }
}
.--hidden-row {
    width: 100%;
    height: 1px;
    background-color: $netflix-black;
}

